# Python-Course-2026-Team3

./: ARCHITECTURE.md  README.md
archive-api/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  nginx.conf  pyproject.toml
archive-api/alembic/: env.py
archive-api/alembic/versions/: 286b953a1461_add_document_chunks_pgvector.py  5953180d07e2_add_word_indices_table_with_gin_index.py  5b82c2192fd6_initial.py  8652295713a2_add_word_indices_table_with_gin_index.py  946c0580ebf9_add_document_chunks_pgvector.py  efc0ab7c4c7e_refactor_replace_content_with_s3_path.py
archive-api/app/: main.py
archive-api/app/api/: endpoints.py  rag_endpoints.py
archive-api/app/core/: celery_app.py  config.py  exceptions.py  logger.py  redis.py  s3.py
archive-api/app/db/: database.py
archive-api/app/models/: archive.py  document_chunk.py  word_index.py
archive-api/app/repositories/: archive_repo.py  index_repo.py
archive-api/app/schemas/: contracts.py
archive-api/app/services/: archive_svc.py  extractor.py  s3_service.py  scoring.py  validation_service.py  validators.py
archive-api/app/worker/: tasks.py
archive-api/tests/: load_test_comparison.py  test_api.py  test_extractor.py
mini-document-analyzer/: .gitignore  README.md  cli.py  main.py  pyproject.toml
mini-document-analyzer/analyzer/: __init__.py  statistics.py  text_reader.py  tokenizer.py
mini-document-analyzer/test/: test_analyzer.py
rag-service/: .env.example  .gitignore  Dockerfile  pyproject.toml
rag-service/app/: main.py
rag-service/app/api/: system.py
rag-service/app/core/: config.py  db.py  logger.py  redis_client.py  s3.py
rag-service/app/models/: chunk.py
rag-service/app/repositories/: archive_repository.py  chunk_repository.py
rag-service/app/services/: context_processor.py  embedding_service.py  handlers.py  llm_service.py  pubsub_handler.py  s3_service.py
rag-service/tests/: evaluate_metrics.py  evaluate_rag.py  test_context_processor.py  test_llm_service.py
