[project]
name = "mini-document-analyzer"
version = "0.1.0"
description = "python course first project"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "analyzer"}]

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
