[project]
name = "mini-document-analyzer"
version = "0.1.0"
description = "python course first project"
authors = [
    {name = "Team-3",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "analyzer"}]

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
