[project]
name = "rag-service"
version = "0.1.0"
description = ""
authors = [
    {name = "bykov-yar",email = "iswwimm@gmail.com"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "redis (>=7.4.0,<8.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "langchain (>=1.2.13,<2.0.0)",
    "langchain-openai (>=1.1.12,<2.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "langchain-text-splitters (>=1.1.1,<2.0.0)",
    "aioboto3 (>=15.5.0,<16.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
